tdf#97319: Give up on attempting to cache non-BMP glyphs for SimpleWinLayout

Add code to handle surrogate pairs in glyph caching, but I can't
figure out why successive non-BMP glyphs in the bugdoc get drawn on
top of each others. So bail out...

Change-Id: Id1907cb766b9285d32e484049bec1b99159c5768
Reviewed-on: https://gerrit.libreoffice.org/23292
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>